force-app/main/default/objects/Credit_Note_Assignment__c/Credit_Note_Assignment__c.object-meta.xml
<CustomObject>
    <label>Credit Note Assignment</label>
    <nameField>
        <displayFormat>CNA-{000}</displayFormat>
        <label>Credit Note Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>