force-app/main/default/objects/Credit_Note_Assignment__c/fields/Amount_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Allocated__c</fullName>
    <label>Amount Allocated</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>