force-app/main/default/objects/Credit_Note_Assignment__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Credit Note Assignments</relationshipLabel>
    <relationshipName>Credit_Note_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>